--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-apps/web/node_modules
+**/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -14,7 +14,7 @@ apps/web/node_modules
 /coverage
 
 # next.js
-/.next/
+**/.next/
 /out/
 
 # production
